--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Aggregator</title>
   <link rel="stylesheet" href="popup.css">
 </head>
