--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Aggregator - 多AI模型对比工具</title>
     <link rel="stylesheet" href="main.css">
+    <!-- Markdown渲染库 -->
+    <script src="https://cdn.jsdelivr.net/npm/marked@12.0.0/marked.min.js"></script>
 </head>
 
 <body>
