fx some known problem

--- a/main.html
+++ b/main.html
@@ -89,40 +89,40 @@
                     <div class="result-header">
                         <h2>ChatGPT</h2>
                         <div class="result-actions">
-                            <button class="copy-btn" data-target="chatgpt">复制</button>
+                            <button class="copy-btn" data-target="chatgpt" data-i18n="copy-button">复制</button>
                         </div>
                     </div>
-                    <div class="content" id="chatgpt-content">等待问题...</div>
+                    <div class="content" id="chatgpt-content" data-i18n="waiting-question">等待问题...</div>
                 </div>
 
                 <div class="result-box" id="gemini-result">
                     <div class="result-header">
                         <h2>Gemini</h2>
                         <div class="result-actions">
-                            <button class="copy-btn" data-target="gemini">复制</button>
+                            <button class="copy-btn" data-target="gemini" data-i18n="copy-button">复制</button>
                         </div>
                     </div>
-                    <div class="content" id="gemini-content">等待问题...</div>
+                    <div class="content" id="gemini-content" data-i18n="waiting-question">等待问题...</div>
                 </div>
 
                 <div class="result-box" id="grok-result">
                     <div class="result-header">
                         <h2>Grok</h2>
                         <div class="result-actions">
-                            <button class="copy-btn" data-target="grok">复制</button>
+                            <button class="copy-btn" data-target="grok" data-i18n="copy-button">复制</button>
                         </div>
                     </div>
-                    <div class="content" id="grok-content">等待问题...</div>
+                    <div class="content" id="grok-content" data-i18n="waiting-question">等待问题...</div>
                 </div>
 
                 <div class="result-box" id="kimi-result">
                     <div class="result-header">
                         <h2>Kimi</h2>
                         <div class="result-actions">
-                            <button class="copy-btn" data-target="kimi">复制</button>
+                            <button class="copy-btn" data-target="kimi" data-i18n="copy-button">复制</button>
                         </div>
                     </div>
-                    <div class="content" id="kimi-content">等待问题...</div>
+                    <div class="content" id="kimi-content" data-i18n="waiting-question">等待问题...</div>
                 </div>
 
 
